name: commands-core
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
copyright: Copyright (C) 2015 Spiros M. Boosalis
maintainer: samboosalis@gmail.com
stability: experimental
homepage: https://github.com/sboosali/commands-core#readme
bug-reports: https://github.com/sboosali/commands-core/issues
synopsis: control your computer by voice, with "grammar combinators"
description:
    Define @Grammar@s declaratively/modularly with combinators, which simultaneously induce @Parser@s and (for serialization) @Recognizer@s.
    .
    @parse@ natural language commands with a @Grammar@, @compile@ the @data@ into @Action@s, and @execute@ those @Action@s on your computer.
    .
category: Accessibility, Natural Language Processing, Parsing, Speech Recognition, Voice Control
author: Spiros Boosalis
tested-with: GHC ==7.10.1
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/sboosali/commands-core

library
    
    if !os(osx)
        buildable: False
    exposed-modules:
        Commands.Core
        Commands.RHS
        Commands.RHS.Types
        Commands.RHS.Derived 
        Commands.RHS.Finite 
        Commands.RHS.Open 
        Commands.Command.Types
        Commands.Frontends.Dragon13
        Commands.Frontends.Dragon13.Types
        Commands.Frontends.Dragon13.Lens
        Commands.Frontends.Dragon13.Text
        Commands.Frontends.Dragon13.Optimize
        Commands.Frontends.Dragon13.Shim
        Commands.Frontends.Dragon13.Shim.Types
        Commands.Frontends.Dragon13.Serialize
        Commands.Backends.OSX
        Commands.Parsers.Earley
        Commands.Servers.Servant
        Commands.Servers.Servant.Types
        Commands.Servers.Servant.V 
        Commands.Servers.Servant.API
        Commands.Servers.Servant.API.Types 
        Commands.Mixins.DNS13OSX9
        Commands.Mixins.DNS13OSX9.Types
        Commands.Mixins.DNS13OSX9.Derived
        Commands.Mixins.DNS13OSX9.Parser
        Commands.Mixins.DNS13OSX9.Frontend
        Commands.Mixins.DNS13OSX9.ObservedSharing
        Commands.Sugar.Keys
        Commands.Extra
        Commands.Instances
        Commands.LHS
        Commands.Munging
        Commands.Main

        Data.Possibly
        Data.Address 
        Data.GUI

        Data.TPrelude

        Data.HTypes 
        Data.HPrelude 
        Data.HFunctor
        Data.HFoldable 
        Data.HTraversable 
        Data.HFunctor.Recursion 

        Data.RefCache
        Data.RefCache.Internal
        Data.HRefCache
        Data.HRefCache.Internal
        Data.RefCache.Extra

        CabalLenses.PackageDescription
        CabalLenses.PackageDescription.TH

    build-depends:
        -- cabal sandbox add-source ../
        workflow-osx ==0.0.1, 
        s-expression ==0.0.0,  
        derive-monoid ==0.0.0,  

        Earley ==0.10.1.0, 

        stm ==2.4.*,  
        template-haskell >=2.10.0.0 && <2.11,
        containers >=0.5.6.2 && <0.6,
        mtl >=2.2.1 && <2.3,
        transformers >=0.4.2.0 && <0.5,
        ghc-prim >=0.4.0.0 && <0.5,
        Cabal >=1.22.4.0 && <1.23,
        filepath >=1.4.0.0 && <1.5,
        vinyl >=0.5.1 && <0.6,
        exceptions >=0.8.0.2 && <0.9,
        lens >=4.12.3 && <4.13,
        either >=4.4.1 && <4.5,
        semigroups >=0.16.2.2 && <0.17,
        action-permutations >=0.0.0.1 && <0.1,
        split >=0.2.2 && <0.3,
        kan-extensions >=4.2.2 && <4.3,
        recursion-schemes >=4.1.2 && <4.2,
        ListLike >=4.2.0 && <4.3,
        text >=1.2.1.3 && <1.3,
        wl-pprint-text >=1.1.0.4 && <1.2,
        language-python >=0.5.0 && <0.6,
        reducers ==3.11.*,
        formatting >=6.2.2 && <6.3,
        interpolatedstring-perl6 >=1.0.0 && <1.1,
        bifunctors >=5 && <5.1,
        profunctors >=5.1.1 && <5.2,
        bv >=0.3.0 && <0.4,
        free >=4.12.1 && <4.13,
        http-types >=0.8.6 && <0.9,
        aeson >=0.9.0.1 && <0.10,
        servant-client ==0.4.4.5,
        servant-server ==0.4.4.5,
        servant        ==0.4.4.5,
        bytestring >=0.10.6.0 && <0.11,
        wai >=3.0.3.0 && <3.1,
        warp >=3.1.3 && <3.2,
        either >=4.4.1 && <4.5,
        time >=1.5.0.1 && <1.6,
        vector >=0.10.12.3 && <0.11,
        async >=2.0.2 && <2.1,
        parallel >=3.2.0.6 && <3.3,
        hashable >=1.2.3.3 && <1.3,
        MemoTrie >=0.6.2 && <0.7,
        recursion-schemes ==4.1.*, 
        base ==4.8.*
    default-language: Haskell2010
    default-extensions: AutoDeriveTypeable DeriveDataTypeable
                        DeriveGeneric DeriveFunctor DeriveFoldable DeriveTraversable
    hs-source-dirs: sources
    ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unticked-promoted-constructors

executable example
    main-is: Example.hs
    build-depends:
        commands-core ==0.0.0,
        lens >=4.12.3 && <4.13,
        base ==4.8.*
    default-language: Haskell2010
    hs-source-dirs: executables
    ghc-options: -Wall -fno-warn-name-shadowing -threaded -with-rtsopts=-N

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    build-depends:
        commands-core -any,
        base ==4.8.*,
        template-haskell >=2.10.0.0 && <2.11,
        Cabal >=1.22.4.0 && <1.23,
        text >=1.2.1.3 && <1.3,
        semigroups >=0.16.2.2 && <0.17,
        lens >=4.12.3 && <4.13,
        QuickCheck >=2.8,
        doctest >=0.9,
        tasty >=0.10,
        tasty-quickcheck >=0.8
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Commands.Test.Extra
        Commands.Test.Types
        Commands.Test.Arbitrary
        Commands.Test.Properties
        Test.DocTest.Discover
    ghc-options: -Wall -fno-warn-name-shadowing -threaded

benchmark command
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        commands-core -any,
        lens >=4.12.3 && <4.13,
        deepseq >=1.4.1.1 && <1.5,
        criterion -any,
        semigroups >=0.16.2.2 && <0.17,
        base -any
    default-language: Haskell2010
    hs-source-dirs: bench
    ghc-options: -Wall -fno-warn-name-shadowing -threaded