name:                commands-server-simple
version:             0.0.0
synopsis:            A very simple @servant@ HTTP server that executes @WorkflowT IO@ actions.
description:         A very simple @servant@ HTTP server that executes @WorkflowT IO@ actions.
homepage:            http://github.com/sboosali/commands-server-simple#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/commands-server-simple


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors

 -- NOTE -XNoImplicitPrelude 
 default-extensions:
    NoImplicitPrelude
    -- deriving
    AutoDeriveTypeable DeriveDataTypeable DeriveGeneric DeriveFunctor DeriveFoldable DeriveTraversable DeriveLift StandaloneDeriving
    -- syntax
    PackageImports LambdaCase EmptyCase TypeOperators PostfixOperators BangPatterns KindSignatures NamedFieldPuns RecordWildCards TupleSections MultiWayIf DoAndIfThenElse EmptyDataDecls InstanceSigs
    -- typeclasses
    MultiParamTypeClasses FlexibleContexts FlexibleInstances TypeFamilies FunctionalDependencies
    -- patterns
    ViewPatterns PatternSynonyms
    -- (miscellaneous)
    ScopedTypeVariables
 
 other-extensions:
   -- macros
   TemplateHaskell
   -- QuasiQuotes
   -- syntax (of literals)
   OverloadedStrings OverloadedLists
   -- RebindableSyntax
   -- kinds
   -- DataKinds ConstraintKinds
   -- harmful to inference
   -- GADTs RankNTypes
   -- (miscellaneous)

 exposed-modules:
                 Commands.Servers.Simple
                 Commands.Servers.Simple.Types

 build-depends:
               base >=4.7 && <5
             , transformers
             , containers

             , spiros
             , workflow-types

             , servant
             , servant-server
             , wai
             , warp
             , text


executable example-commands-server-simple
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , commands-server-simple
