name:                commands-server-types
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/commands-server-types#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
cabal-version:       >=1.10

-- PVP
-- https://wiki.haskell.org/Package_versioning_policy
-- "A.B is known as the major version number, and C the minor version number."

extra-source-files:
  README.md
  .gitignore
  .travis.yml
  HLint.hs
  stack.yaml

-- data-files:

--  data/

source-repository head
  type:     git
  location: https://github.com/sboosali/commands-server-types


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:
  -Wall
  -fwarn-incomplete-uni-patterns
  -fwarn-incomplete-record-updates
  -fwarn-identities
  -fno-warn-unticked-promoted-constructors

 -- NOTE -XNoImplicitPrelude 
 default-extensions:
    NoImplicitPrelude
    -- deriving
    AutoDeriveTypeable DeriveDataTypeable DeriveGeneric DeriveFunctor DeriveFoldable DeriveTraversable DeriveLift StandaloneDeriving
    -- syntax
    PackageImports LambdaCase EmptyCase TypeOperators PostfixOperators BangPatterns KindSignatures NamedFieldPuns RecordWildCards TupleSections MultiWayIf DoAndIfThenElse EmptyDataDecls InstanceSigs
    -- typeclasses
    MultiParamTypeClasses FlexibleContexts FlexibleInstances TypeFamilies FunctionalDependencies
    -- patterns
    ViewPatterns PatternSynonyms
    -- (miscellaneous)
    ScopedTypeVariables
 
 other-extensions:
   -- macros
   TemplateHaskell
   -- QuasiQuotes
   -- syntax (of literals)
   OverloadedStrings OverloadedLists
   -- RebindableSyntax
   -- kinds
   -- DataKinds ConstraintKinds
   -- harmful to inference
   -- GADTs RankNTypes
   -- (miscellaneous)

 exposed-modules:
                 Commands.Server.Types
                 Commands.Server.Backend.Types
                 Commands.Server.Correction.Types
                 Commands.Server.Correction.Shell
                 Commands.Server.Platform.Types

 build-depends:
               base >=4.7 && <5
             , transformers
--             , mtl

             , spiros
             , commands-core
             , commands-frontend-DragonNaturallySpeaking
             , workflow-types 

             , haskeline
             , data-default-class
--             , bytestring
             , text
             , lens
